# winter

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  LICENSE  README.md  justfile  package_list
examples/: example_repo.json  example_repo.toml
old/: package_list
old/src/: error.rs  main.rs
old/src/backend/: data.rs  filesystem.rs  manager.rs  mod.rs  remote.rs
old/src/frontend/: cli.rs
old/src/old/: files.rs
scripts/: build.sh  rebuild_package_list.sh
src/: app.rs  cli.rs  data.rs  error.rs  fetch.rs  lib.rs  logger.rs  main.rs  prelude.rs  repo.rs
src/backend/: data.rs  filesystem.rs  manager.rs  utils.rs
src/frontend/: cli.rs
