[package]
name = "winter"
description = "lightweight, bring-your-own-CI package manager"
authors = ["Joshua Price <jwpjr567@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jwpjrdev/winter"
keywords = ["package-manager", "command-line-interface"]
categories = ["command-line-interface"]

[[bin]]
name = "winter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
is-url = "1.0.4"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.87"
sudo = "0.6.0"
ureq = { version = "2.5.0", features = ["tls"] }
