[package]
name = "winter"
description = "lightweight, bring-your-own-CI package manager"
authors = ["Joshua Price <jwpjr567@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jwpjrdev/winter"
keywords = ["package-manager", "command-line-interface"]
categories = ["command-line-interface"]

[[bin]]
name = "winter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
directories = "4.0.1"
is-terminal = "0.4.7"
is-url = "1.0.4"
log = "0.4.17"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.96"
simplelog = "0.12.1"
sudo = "0.6.0"
toml = "0.7.3"
ureq = { version = "2.5.0", features = ["tls"] }
